Immense bug fixes regarding Jackson and translations, dependencies and further things..
added /pay command to JExEconomy